--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: java
 
 deploy:
   provider: heroku
-  api-key: 
+  api-key: c36d75b1-8be8-4a61-834c-4b76dc1fd024
     secure: $HEROKU_API_KEY
   app: calcula-media
